--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "file-saver": "^2.0.5",
+    "firebase": "^9.17.1",
     "next": "13.2.1",
+    "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
