--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "cloudinary": "^1.34.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.17.1",
-    "next": "13.2.1",
+    "firebase-admin": "^11.5.0",
+    "next": "latest",
     "next-auth": "^4.19.2",
+    "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
